<resources>
    <string name="f">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="r">uno</string>
    <string name="s">dos</string>
    <string name="a">tres</string>
    <string name="k">Navigate up</string>
    <string name="y">Done</string>
    <string name="h">OFF</string>
    <string name="x">ON</string>
    <string name="d">Alt+</string>
    <string name="l">Ctrl+</string>
    <string name="i">delete</string>
    <string name="t">enter</string>
    <string name="m">Function+</string>
    <string name="c">Meta+</string>
    <string name="q">Shift+</string>
    <string name="p">space</string>
    <string name="z">Sym+</string>
    <string name="o">Menu+</string>
    <string name="w">Search…</string>
    <string name="e">Clear query</string>
    <string name="v">Search</string>
    <string name="ff">Submit query</string>
    <string name="fr">Voice search</string>
    <string name="fb">Collapse</string>
    <string name="fk">This operation will delete all account data and log out.</string>
    <string name="fj">Deletion failed, please try again.</string>
    <string name="fy">The account data has been deleted. You can go to Google Account for further processing.</string>
    <string name="fu">Your Google account will not be affected.</string>
    <string name="fg">Delete Account</string>
    <string name="fh">Sign out</string>
    <string name="fx">Switch Account</string>
    <string name="fd">Account</string>
    <string name="fl">Add to Cart</string>
    <string name="fi">Back</string>
    <string name="ft">Download APK</string>
    <string name="fm">Downloading</string>
    <string name="fc">Cancel</string>
    <string name="fq">Drugs</string>
    <string name="fp">Fill Reason</string>
    <string name="fz">Gambling</string>
    <string name="fo">Not interested</string>
    <string name="fw">Why not interested Ads:</string>
    <string name="fe">Others:</string>
    <string name="fn">Politics</string>
    <string name="fv">Porn</string>
    <string name="f0">Religion</string>
    <string name="f1">Remove Ads</string>
    <string name="f2">Repetition</string>
    <string name="f3">Report</string>
    <string name="f4">Report this Ads:</string>
    <string name="f5">Submit</string>
    <string name="f6">Violence</string>
    <string name="f7">Sponsored by %s</string>
    <string name="f8">Press the back button again to close the Ad.</string>
    <string name="f9">In the next %s hours, all ads will be removed for you</string>
    <string name="rf">Enjoy smooth video and music playback experience</string>
    <string name="rr">All ads will be removed before %s</string>
    <string name="rs">Congratulations on getting the ad-free privilege!</string>
    <string name="ra">Watch 1 Rewarded Ad, and get %s hours ad-free privilege!</string>
    <string name="rb">Watch rewarded video ads, remove all ads in the next %s hours</string>
    <string name="rk">Free privilege:</string>
    <string name="rj">More VIP privileges</string>
    <string name="ry">Watch 1 Rewarded Ad, and get %s hours ad-free privilege!</string>
    <string name="ru">Remove all Ads for free</string>
    <string name="rg">Watch</string>
    <string name="rh">%ss</string>
    <string name="rx">SPONSOR</string>
    <string name="rd" formatted="false">https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&amp;iu=/124319096/external/single_ad_samples&amp;ciu_szs=300x250&amp;impl=s&amp;gdfp_req=1&amp;env=vp&amp;output=vast&amp;unviewed_position_start=1&amp;cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&amp;correlator=</string>
    <string name="rl">8e64298ab150840b4cac5008d24fc85f</string>
    <string name="ri">9267da0fd2cc594ddf299498fcdd51dd</string>
    <string name="rt">1be5893509f5c1dfff8bc8682dd757ce</string>
    <string name="rm">9ce602baa71208a2711d0379fd3a84e3</string>
    <string name="rc">ba728e6388b03b5cdb03707d6ba8eeab</string>
    <string name="rq">9d4945b04725e04575a3d7287d59fcc0</string>
    <string name="rp">620846fbb784b602c86de72780e57005</string>
    <string name="rz">78602ce225b45f9bc1761cd45de0a1a0</string>
    <string name="ro">df8e83a8b47944023ece82896635dc65</string>
    <string name="rw">b02d2d0f408c32bdd2c53d1d233adf96</string>
    <string name="re">620b42bc00ca5634ab18274601ff241e</string>
    <string name="rn">328f24768ec756c8218667da4dacbc7d</string>
    <string name="rv">c9a0eb318c27f5b51ef94c6de593a8d7</string>
    <string name="r0">be08c6a242c436084413e24cff06455f</string>
    <string name="r1">394733b9e7253651dfc1657e4da03fdb</string>
    <string name="r2">3f48357d9e9ccc123a9aa951d7255df4</string>
    <string name="r3">573f810f2c1de7601f3d4c7345792f11</string>
    <string name="r4">22614a01b5473817919bd646747d5e5c</string>
    <string name="r5">1a970d50189043223ed50d7948bf9520</string>
    <string name="r6">273a2c6e7912d42424a6dd1426bf2cd2</string>
    <string name="r7">545efca7abbe96a6844c6e009012783e</string>
    <string name="r8">90fb5f89cc96738debd3d42d40b63782</string>
    <string name="r9">7197f425f78af5664af31e6913958df3</string>
    <string name="sf">6bf1418ca2acf8162d7e4acfbb2912e1</string>
    <string name="sr">a3eef33f08c1274c54fb69b216a78372</string>
    <string name="ss">17f05d8238e9909a847b61160c0db347</string>
    <string name="sa">3d6207dea5cbe7506b8dbbfd9141b12d</string>
    <string name="sb">fd0e9b277b7c329156cc2dce485eacec</string>
    <string name="sk">7125458a21a5332e93e9d69d4aae9253</string>
    <string name="sj">b370ab8b7532946f3e37b1e1f724b1b7</string>
    <string name="sy">4747d9035a05eb5ea9ac52a3eb0db989</string>
    <string name="su">a1027ab1d3e3c5f954a9337556c2a97e</string>
    <string name="sg">2847d03337f60d7ffb662da6210f3f34</string>
    <string name="sh">c977303763106bd5f0b5a624f566769a</string>
    <string name="sx">8aab83b122d4b74507aea1f6c02764b0</string>
    <string name="sd">fe22e4afcdff39f97167189d58808b45</string>
    <string name="sl">9156ab4bb8b44790cace32d683169221</string>
    <string name="si">22016f2719bfd41a3c8060364b5f4c5e</string>
    <string name="st">aec92f73b330c94b5a7b7a31dc6e1668</string>
    <string name="sm">160c0749d4e7bd9e7bafa1730d383fbb</string>
    <string name="sc">7c3145f2b7c526073b457960ef85ad9c</string>
    <string name="sq">902e63b625469d0f190c09e3444f639b</string>
    <string name="sp">4cf68f5e317c41d445f336fdc3114ef1</string>
    <string name="sz">9a18ed10053da8236f7324868c8b3e10</string>
    <string name="so">19306dd9feecfd70f932d848d8369310</string>
    <string name="sw">4f83443a74c1e50d1536544ae9c116df</string>
    <string name="se">4b9bb94b5e785c0cc7f03b0327bd6802</string>
    <string name="sn">1f0602f7cead9b54d533a10ccd6c742f</string>
    <string name="sv">efa7fb7aec24fa32dfa4ab2193d57108</string>
    <string name="s0">c3fb8058ef8fa80019024b6926e6602e</string>
    <string name="s1">df94e8c3c5f6288769e6e8a2535877e1</string>
    <string name="s2">0ed40292d1b0fe56f19b29df39bcf627</string>
    <string name="s3">1a635d94bf9af508d4dfa54a4dd40cff</string>
    <string name="s4">02adf31f5938bbe8404b5bbd3efcaa6c</string>
    <string name="s5">19e332180901d73c5dd067c989e7b9e8</string>
    <string name="s6">b71479223c15e353a1d958f06b2d392d</string>
    <string name="s7">cb95c0735536ccd11c3cab4579b8e337</string>
    <string name="s8">7f793842ef2cde5281e7d2cd28894463</string>
    <string name="s9">f5c779a27226a6d8311340ee27e7d1c2</string>
    <string name="af">fb87a8c43cb3ce5d7ff6e4ea20cfe7dc</string>
    <string name="ar">ae7eb20bf678fe5d01441b7e6972b701</string>
    <string name="as">45d9bccc909e061e0c3d7e5e9a89d806</string>
    <string name="aa">bb7b4bd0fd6d010907bc25402f100043</string>
    <string name="ab">7fdd8ec3cac4f9ec5d87408888ca9321</string>
    <string name="ak">7f12ae70a56419472292f4da966db7db</string>
    <string name="aj">d5f5339fd79e2768b39bb4669cf06073</string>
    <string name="ay">97f8c4d9fb1f1cd57071cc44ae6ba303</string>
    <string name="au">f153cfaecb5ab59db2be8af2f378a4b4</string>
    <string name="ag">a699f046b61762ba3a3d628da209db5c</string>
    <string name="ah">e7add36843c686aabd22fbcbb98872c9</string>
    <string name="ax">11241daa2cd37fa897c8b4f185244a89</string>
    <string name="ad">8431101193d4a337110b701d68ba5f3d</string>
    <string name="al">f5eada224e04ccf12d1bad7a0c79810b</string>
    <string name="ai">daf7a9710420b3295c876a02821b02b3</string>
    <string name="at">1ccb0cb77005ba40f078cc0eb5881ed2</string>
    <string name="am">65f6082b75504157a561571a61b431c2</string>
    <string name="ac">3fa6a62b12c95c43cd5ed4c7e062aa13</string>
    <string name="aq">12f304000da8dca11af67eaecde9761f</string>
    <string name="ap">88fe4b8d7085958cdcfcedf24f1e7e2f</string>
    <string name="az">b82bfc3bf4d98949f0b612e042b5c57a</string>
    <string name="ao">09defbf7d70dab8c98ddac1f27fedbc6</string>
    <string name="aw">3e2b632ca5ba6b88272ad06ec217a724</string>
    <string name="ae">cc4cae7d35bf2c135fbc21e49213bffd</string>
    <string name="an">ae506af910761b83c36ed422bc602d73</string>
    <string name="av">0ad9278b33481aba48f1e20da3162c9c</string>
    <string name="a0">667f6e6925d967d90fb4320277b7aec2</string>
    <string name="a1">ee3b401122da0bf552893efdf8e66eb2</string>
    <string name="a2">58a450f46b83d3d223fb35db8f0d9588</string>
    <string name="a3">1d1b1b236288faa1a56b18447c8ca2db</string>
    <string name="a4">78d0b09be914a8930570076964a02f95</string>
    <string name="a5">d723f0182739384ef42b523597a3b267</string>
    <string name="a6">3706a4989279be57fe20f42b9a70bdf6</string>
    <string name="a7">60ff77afa3020b88ec8d6e973de59d2a</string>
    <string name="a8">cec73df02aa4263f2c7990906ed03395</string>
    <string name="a9">c5d354bdd1597dcc45bd0ab9a629f603</string>
    <string name="bf">280b655dda63d6970864e20b6e967dc8</string>
    <string name="br">61cdc9db1f7bd59fedff4e8282f333e7</string>
    <string name="bs">ecfd15a8ae58ac867c426866d2bab4b5</string>
    <string name="ba">New mission</string>
    <string name="bb">205b5a1a239f20c8ce4c36b5301cb711</string>
    <string name="bk">14e9e01026eb2f2cf606d1d7241363e8</string>
    <string name="bj">06b31ac90ac169af2b41b9faf7f6dc2a</string>
    <string name="by">2e525f02e90ac593e9251a196979aac5</string>
    <string name="bu">10ca1be15503a955e3458c277e13a79e</string>
    <string name="bg">735e6620ada2414a4ab510f70af73bd7</string>
    <string name="bh">35941135c1cde71c43d6f995021436aa</string>
    <string name="lx">There is an issue with the current playback. The app needs to be restarted.</string>
    <string name="ld">Restart Now</string>
    <string name="frk">Allowing us and/or our partners to use this data for personalized ads and content and other purposes, as described in our Privacy Policy:\n\n• Gives you a more personalized experience, ads, and content\n\n• Helps support product improvements and developments\n\n• Allows you to participate in promotions</string>
    <string name="frj">Are you sure?</string>
    <string name="fry">Back</string>
    <string name="frz">I understand and confirm</string>
    <string name="faf">Click to load more</string>
    <string name="far">No more data</string>
    <string name="fas">load more failed</string>
    <string name="faa">Loading...</string>
    <string name="fai">Cancel</string>
    <string name="fow">Once deleted, the file cannot be recovered.</string>
    <string name="foe">Allow</string>
    <string name="fon">Cancel</string>
    <string name="fng">Select AM or PM</string>
    <string name="fno">AM</string>
    <string name="fnv">PM</string>
    <string name="ra2">CANCEL</string>
    <string name="ra3">CREATE</string>
    <string name="ra4">Title</string>
    <string name="ra7">New playlist</string>
    <string name="rbh">Vertical swipe on the left</string>
    <string name="rbx">Brightness</string>
    <string name="rbd">Double tap</string>
    <string name="rbl">Play/Pause</string>
    <string name="rbm">Vertical swipe on the right</string>
    <string name="rbc">Volume</string>
</resources>