<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/material_clock_period_toggle"
    android:background="?attr/uc"
    android:visibility="gone"
    android:layout_width="@dimen/xz"
    android:layout_height="@dimen/xq"
    android:contentDescription="@string/fng"
    android:layout_marginStart="@dimen/xp"
    app:checkedButton="@+id/material_clock_period_am_button"
    app:layout_constraintStart_toEndOf="@+id/material_clock_display"
    app:layout_constraintTop_toTopOf="0"
    app:selectionRequired="true"
    app:singleSelection="true">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/material_clock_period_am_button"
        android:layout_width="wrap_content"
        android:text="@string/fno"
        android:insetTop="8dp"
        app:shapeAppearanceOverlay="?attr/fgm"
        style="?attr/fr8"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/material_clock_period_pm_button"
        android:layout_width="wrap_content"
        android:text="@string/fnv"
        android:insetBottom="8dp"
        app:shapeAppearanceOverlay="?attr/fgm"
        style="?attr/fr8"/>
</com.google.android.material.button.MaterialButtonToggleGroup>
