<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/je">
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/load_more_loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/jw"
            style="?android:attr/progressBarStyleSmall"/>
        <TextView
            android:textSize="@dimen/zb"
            android:textColor="@android:color/black"
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/jw"
            android:text="@string/faa"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/load_more_load_fail_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_gravity="center"
            android:id="@+id/tv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fas"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/load_more_load_complete_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faf"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/load_more_load_end_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/far"/>
    </FrameLayout>
</FrameLayout>
