<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/fragment_playlist_create_0"
    android:layout_width="310dp"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/fig"
        android:id="@+id/ivTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ra7"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="0"
        app:layout_constraintTop_toTopOf="0"/>
    <EditText
        android:textSize="14sp"
        android:textColor="?attr/fig"
        android:textColorHint="#cc868686"
        android:id="@+id/etInput"
        android:tag="binding_1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:hint="@string/ra4"
        android:lines="1"
        android:textCursorDrawable="@drawable/lm"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintStart_toStartOf="0"
        app:layout_constraintTop_toBottomOf="@+id/ivTitle"
        style="@style/ye"/>
    <TextView
        android:textSize="14sp"
        android:textStyle="bold"
        android:id="@+id/tvCreate"
        android:tag="binding_2"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ra3"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="0"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintTop_toBottomOf="@+id/etInput"/>
    <TextView
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="?attr/fiy"
        android:id="@+id/tvCancel"
        android:tag="binding_3"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:text="@string/ra2"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCreate"
        app:layout_constraintEnd_toStartOf="@+id/tvCreate"
        app:layout_constraintTop_toTopOf="@+id/tvCreate"/>
</androidx.constraintlayout.widget.ConstraintLayout>
