<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/fhm"
    android:paddingTop="22dp"
    android:paddingBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="8dp"
    android:elevation="2dp">
    <TextView
        android:textSize="20sp"
        android:textColor="#ff212121"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fw"
        android:layout_marginStart="8dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    <EditText
        android:theme="@style/uw"
        android:enabled="false"
        android:textColorHint="#ffb2b2b2"
        android:id="@+id/et_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fp"
        android:maxLines="3"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <LinearLayout
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <Button
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#ff757575"
            android:id="@+id/btn_cancel"
            android:background="@drawable/fhi"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fc"
            android:textAllCaps="true"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>
        <Button
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#ff0099ff"
            android:id="@+id/btn_submit"
            android:background="@drawable/fhi"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f5"
            android:textAllCaps="true"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>
</LinearLayout>
