<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/xw"
    android:paddingTop="24dp"
    android:paddingBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">
    <TextView
        android:textSize="16sp"
        android:textColor="?attr/fig"
        android:gravity="start"
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lx"
        android:lineSpacingMultiplier="1.2"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintStart_toStartOf="0"
        app:layout_constraintTop_toTopOf="0"/>
    <TextView
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="?attr/fii"
        android:gravity="center"
        android:id="@+id/tvPositive"
        android:layout_width="96dp"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:text="@string/ld"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintTop_toBottomOf="@+id/tvContent"/>
    <TextView
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="?attr/fiy"
        android:gravity="center"
        android:id="@+id/tvNegative"
        android:layout_width="96dp"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:text="@string/fai"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/tvPositive"
        app:layout_constraintTop_toBottomOf="@+id/tvContent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
