<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/fragment_local_media_confirm_custom_0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="25dp"
    android:paddingEnd="25dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="?attr/ym"
        android:paddingTop="24dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">
        <TextView
            android:textSize="16sp"
            android:textColor="?attr/fig"
            android:gravity="start"
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fow"
            android:lineSpacingMultiplier="1.2"
            app:layout_constraintTop_toTopOf="0"/>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="?attr/uj"
            android:gravity="center"
            android:id="@+id/tv_positive"
            android:layout_width="96dp"
            android:layout_height="36dp"
            android:layout_marginTop="18dp"
            android:text="@string/foe"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintTop_toBottomOf="@+id/tv_content"/>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="?attr/fiy"
            android:gravity="center"
            android:id="@+id/tv_negative"
            android:layout_width="96dp"
            android:layout_height="36dp"
            android:layout_marginTop="18dp"
            android:text="@string/fon"
            android:layout_marginEnd="104dp"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintTop_toBottomOf="@+id/tv_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
