<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxWidth="300dp"
    android:minWidth="200dp">
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/fht"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:elevation="3dp">
        <TextView
            android:textSize="14sp"
            android:textColor="#ff212121"
            android:gravity="center_vertical"
            android:id="@+id/tv_not_interested"
            android:background="@drawable/fhi"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/fo"
            android:drawableLeft="@drawable/fhq"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/fhq"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>
        <TextView
            android:textSize="14sp"
            android:textColor="#ff212121"
            android:gravity="center_vertical"
            android:id="@+id/tv_report"
            android:background="@drawable/fhi"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/f3"
            android:drawableLeft="@drawable/fhw"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/fhw"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>
        <TextView
            android:textSize="14sp"
            android:textColor="#ff212121"
            android:gravity="center_vertical"
            android:id="@+id/tv_remove_ads"
            android:background="@drawable/fhi"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/f1"
            android:drawableLeft="@drawable/fho"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/fho"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>
    </LinearLayout>
</LinearLayout>
